Update bike template and fix styling

--- a/detiels.html
+++ b/detiels.html
@@ -11,7 +11,7 @@
     <div class="top__bar">
       <a href="#" class="top__bar__logo">
         <img
-          src="../images/Property 1=Default.svg"
+          src="./images/Property 1=Default.svg"
           alt="logo bike"
         >
       </a>
