--- a/menu.html
+++ b/menu.html
@@ -20,10 +20,10 @@
         <nav class="nav menu__nav">
           <ul class="nav__list">
             <li class="nav__item"><a class="nav__link" href="../index.html">Home</a></li>
-            <li class="nav__item"><a class="nav__link" href="../AboutUs/aboutUs.html">About Us</a></li>
-            <li class="nav__item"><a class="nav__link" href="../Bike/bikes.html">Compare Bikes</a></li>
-            <li class="nav__item"><a class="nav__link" href="../Details/detiels.html">Details</a></li>
-            <li class="nav__item"><a class="nav__link" href="../Contact/contact.html">Contact</a></li>
+            <li class="nav__item"><a class="nav__link" href="../aboutUs.html">About Us</a></li>
+            <li class="nav__item"><a class="nav__link" href="../bikes.html">Compare Bikes</a></li>
+            <li class="nav__item"><a class="nav__link" href="../detiels.html">Details</a></li>
+            <li class="nav__item"><a class="nav__link" href="../contact.html">Contact</a></li>
           </ul>
         </nav>
         <a href="tel:+123455555555" class="menu__phone--number">+1 234 5555-55-55</a>
