--- a/aboutUs.html
+++ b/aboutUs.html
@@ -13,7 +13,7 @@
     <div class="top__bar">
       <a href="#menu" class="top__bar__logo">
         <img
-          src="../images/Property 1=Default.svg"
+          src="./images/Property 1=Default.svg"
           alt="logo bike"
         >
       </a>
@@ -31,13 +31,13 @@
     </div>
     <section id="gallery">
       <a href="images/photo1.jpg" data-lg-size="600-600">
-          <img alt="Photo 1" src="../images//frst.png">
+          <img alt="Photo 1" src="./images//frst.png">
       </a>
       <a href="images/photo2.jpg" data-lg-size="600-600">
-          <img alt="Photo 2" src="../images/thrd.png">
+          <img alt="Photo 2" src="./images/thrd.png">
       </a>
       <a href="images/photo3.jpg" data-lg-size="600-600">
-          <img alt="Photo 3" src="../images/scnd.png">
+          <img alt="Photo 3" src="./images/scnd.png">
       </a>
   </section>
 
