--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     <div class="top__bar">
       <a href="#menu" class="top__bar__logo">
         <img
-          src="../images/Property 1=Default.svg"
+          src="./images/Property 1=Default.svg"
           alt="logo bike"
         >
       </a>
